# Master-Class-2

./: .gitignore  README.md  pyproject.toml
data/interim/: ted_awards_wrangled.csv
data/processed/: test.csv  train.csv
data/raw/: TED award 2018-2023.xlsx
notebooks/: 1_data_wrangling.ipynb  2_exploratory_data_analysis.ipynb  3_feature_engineering.ipynb  4_modeling.ipynb  5_evaluation_error_analysis.ipynb
results/: best_model_config.json  model_comparison.csv
