[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auction-project"
version = "0.1.0"
description = "Notebook-first auction bidder count classification project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "catboost>=1.2",
  "xgboost>=2.0",
  "openpyxl>=3.1",
  "jupyter>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
